crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@if_else_statements_in_cairo_m___simple_if.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: If-Else Statements in Cairo-M - Simple If"
input_file: mdtest/02-control-flow/01-if-else.md
---
Source:
fn test_simple_if(x: felt) -> felt {
    if x == 15 {
        return 1;
    }
    return 0;
}
============================================================
Generated CASM:
test_simple_if:
test_simple_if:
test_simple_if_0:
   0: 5 -4 15 0            // [fp + 0] = [fp + -4] op 15
   1: 5 -4 15 0            // [fp + 0] = [fp + -4] op 15
   2: 14 0 3 _             // if [fp + 0] != 0 jmp rel test_simple_if_2
test_simple_if_1:
   3: 9 1 -3 _             // Return value 0: [fp -3] = 1
   4: 11 _ _ _             // return
test_simple_if_2:
   5: 9 0 -3 _             // Return value 0: [fp -3] = 0
   6: 11 _ _ _             // return
